# pixiu

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  ssl.conf  travis.yml
cmake/: Config.cmake.in  bundle.cmake.in  hunter_config.cmake  install.cmake  packages.cmake  src.cmake  toolchain_conf.cmake
cmake/scheme/: basic_target_setting.cmake  lib.cmake
doc/: README-preview.md
include/future_beast/: detect_ssl.hpp
include/httpservpp/: config.hpp  error_code_throw.hpp  logger.hpp  macro.hpp  path.hpp  request_handler.hpp  service.hpp
include/httpservpp/server/: core.hpp  request_handler.hpp  service.hpp
include/httpservpp/server/session/: http_base.hpp  interface.hpp  plain_http.hpp
include/httpservpp/session/: http.hpp  http_base.hpp  https.hpp  interface.hpp  plain_http.hpp
include/pixiu/: client.hpp  config.hpp  error_code_throw.hpp  gauth.hpp  logger.hpp  macro.hpp  params.hpp  path.hpp  request.hpp  request_router.hpp  request_utils.hpp  response.hpp  server.hpp  utils.hpp
include/pixiu/client/: core.hpp  http.hpp  https.hpp  request_param.hpp
include/pixiu/server/: core.hpp  fiber_guard.hpp  params.hpp  request.hpp  request_handler.hpp  request_router.hpp  response.hpp  session_request_router.hpp
include/pixiu/server/error/: all.hpp  base.hpp  illegal_target.hpp  server_error.hpp  target_not_found.hpp  unknown_method.hpp
include/pixiu/server/session/: context.hpp  http.hpp  http_base.hpp  http_base2.hpp  http_base_async.hpp  http_base_coro.hpp  https.hpp  interface.hpp  plain_http.hpp  tls_http.hpp
src/example/: boost_ssl_server_app.cpp  server_app.cpp  ssl_server_app.cmake  ssl_server_app.cpp
src/httpservpp/: logger.hpp  service.cmake
src/httpservpp/server/: core.cmake  logger.cmake  path.cmake
src/pixiu/: client.cmake  logger.cmake  server.cmake  utils.cpp
src/pixiu/client/: core.cmake
src/pixiu/server/: logger.cmake
src/test/boost/: http_server_coro.cpp  http_server_coro_ssl.cpp
src/test/httpservpp/: logger.cmake  logger.cpp  service.cmake  service.cpp
src/test/httpservpp/server/: core.cmake  core.cpp  logger.cmake  logger.cpp  service.cmake  service.cpp
src/test/pixiu/: boost_ssl_server_app.cpp  client.cmake  client.cpp  load_server_certificate.hpp  logger.cmake  server.cmake  server.cpp  ssl_server_app.cpp  utils.cmake  utils.cpp
src/test/pixiu/client/: core.cmake  core.cpp
src/test/pixiu/server/: core.cmake  core.cpp  logger.cmake
test_data/: client_test_site.txt  logger_test.json
